# motherduck_EDA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: dashboard.yml  function.yml  pipeline-image.yml
.teamcity/: pom.xml  settings.kts
.teamcity/patches/projects/: _Self.kts
ci/teamcity/: dashboard-tests.sh  deploy-dashboard.sh  deploy-function.sh  deploy-pipeline-image.sh  docker-build.sh  lib.sh  python-tests.sh
dashboard/: index.html  package-lock.json  package.json
dashboard/public/: staticwebapp.config.json
dashboard/src/: App.test.tsx  App.tsx  main.tsx
dashboard/src/charts/: DailyVolumeChart.tsx  (+6 more)
functions/: requirements.txt
functions/run-pipeline/: __init__.py  function.json
functions/tests/: conftest.py  test_run_pipeline.py
infra/: main.bicep  parameters.json
pipeline/: __init__.py  anomaly.py  api_extract.py  api_stats.py  azure_run.py  blob_upload.py  classify.py  client.py  config.py  crossqueue.py  curate.py  dedup.py  flatten.py  ingest_api.py  ingest_csv.py  main.py  metrics_queue.py  parse.py  report.py  storage.py
scripts/: align_april_excel_report.py
tests/: conftest.py  test_anomaly.py  test_api_extract.py  test_api_stats.py  test_april_2026_reference.py  test_azure_run.py  test_blob_upload.py  test_client.py  test_config.py  test_crossqueue.py  test_curate.py  test_dashboard_april_excel_alignment.py  test_dedup.py  test_ingest_api.py  test_ingest_csv.py  test_main.py  test_metrics_queue.py  test_parse.py  test_report.py  test_storage.py  test_teamcity_migration.py
(+56 files in other folders)
